# CS236

./: .gitignore  CMakeLists.txt  ColumnColumnKey.cpp  ColumnColumnKey.h  ColumnNamePair.cpp  ColumnNamePair.h  ColumnValueKey.cpp  ColumnValueKey.h  Database.cpp  Database.h  Doxyfile  Expression.cpp  Expression.h  Fact.cpp  Fact.h  FactClass.cpp  FactClass.h  Facts.cpp  Facts.h  Forest.cpp  Forest.h  Graph.cpp  Graph.h  HeadPredicate.cpp  HeadPredicate.h  Header.cpp  Header.h  ID.cpp  ID.h  InputChars.cpp  InputChars.h  Lexer.cpp  Lexer.h  Node.cpp  Node.h  Opperator.cpp  Opperator.h  Parameter.cpp  Parameter.h  Parser.cpp  (+36 more)
autoTesting/: Lab  file1.txt  file10.txt  file2.txt  file3.txt  file4.txt  file5.txt  file6.txt  file7.txt  file8.txt  file9.txt  test.sh  test.sh~
